# rs-academic-paper-interpreter-mcp

./: .gitignore  CLAUDE.md  Cargo.toml  DESIGN.md  README.md  academic-paper-interpreter-mcp.env  academic-paper-interpreter-mcp.service
nginx/: mcp-server.conf
ngrok/: ngrok.service
scripts/: install-service.sh  ngrok-url.sh  setup-nginx-ssl.sh  setup-ngrok-service.sh  uninstall-service.sh  update-service.sh
shared/src/: errors.rs  logger.rs
src/: lib.rs
src/llm/: config.rs  mod.rs  provider.rs
src/models/: analysis.rs  llm_config.rs  mod.rs  paper.rs  request.rs  response.rs
src/server/: handler.rs  mod.rs
src/server/tools/: analyze.rs  fetch.rs  interpret.rs  mod.rs  search.rs
src/server/transport/: mod.rs  sse.rs  stdio.rs
